--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
   "author": "Chris Dobbins",
   "license": "ISC",
   "dependencies": {
+    "chai-as-promised": "^5.3.0",
     "cheerio": "^0.20.0",
     "request": "^2.72.0",
     "request-promise": "^3.0.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
+    "mocha": "^2.5.3",
+    "should": "^10.0.0"
   }
 }
